[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SPOT"
version = "0.1.0"
description = "Spatial omics pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "sklearn",
    "anndata",
    "scanpy",
    "networkx",
    "time",
    "json"
]
