[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spot"
version = "0.1.0"
description = "Spatial omics pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "anndata",
    "scanpy",
    "networkx"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]